Fix flex item too small and set badges hidden by default

--- a/src/styles/components/_portfolio.scss
+++ b/src/styles/components/_portfolio.scss
@@ -24,7 +24,7 @@
       justify-content: center;
       align-items: center;
       margin: 0.4rem 0.8rem 0.4rem 0;
-      flex: 1 0 20%;
+      flex: 1 0 auto;
 
       svg {
         margin-right: 0.5rem;
